--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "name": "One click test",
-  "description": "hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello",
+  "description": "testing",
   "website": "http://heroku.com",
   "repository": "https://github.com/ksiegel/heroku-one-click",
   "keywords": [
